# xingchen-mcp-server

./: LICENSE  README.md  pyproject.toml
src/mcp_server/: server.py
src/mcp_server/entities/: ifly_client.py
src/test/: test_server.py  test_xingchen.py
src/xingchen_mcp_server/: server.py
